[gd_scene load_steps=9 format=2]

[ext_resource path="res://Containers/BaseBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Styles/NormalButton.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Styles/HoverButton.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Styles/FocusButton.tres" type="StyleBox" id=4]
[ext_resource path="res://Resources/Styles/PressedButton.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Icons/add_task.png" type="Texture" id=6]
[ext_resource path="res://Containers/TasksContainer.gd" type="Script" id=7]
[ext_resource path="res://Containers/NewTaskDialog.tscn" type="PackedScene" id=8]

[node name="TasksContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 176.0
margin_top = 176.0
margin_right = -192.0
margin_bottom = -104.0
script = ExtResource( 7 )

[node name="HSeparator" parent="." index="1"]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 81.34
margin_bottom = 85.34

[node name="AddTaskButton" type="Button" parent="." index="2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -74.0
margin_top = 18.0
margin_right = -26.0
margin_bottom = 66.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="." index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 88.0
margin_right = -1.0
margin_bottom = -26.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer" index="0"]
margin_right = 911.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewTaskDialog" parent="." index="4" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -167.0
margin_right = 222.5
margin_bottom = 167.0

[connection signal="pressed" from="AddTaskButton" to="." method="_on_AddTaskButton_pressed"]
